--- a/docs/wishlist.ipynb
+++ b/docs/wishlist.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# . . .\n",
@@ -36,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_info = clm.utils.load_config(config_file_loc)"
@@ -52,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "massmod = clm.CLMassMod(model_info)\n",
@@ -63,13 +69,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A `CLMassMod` object should be able to perform fitting based on any combination of a variety of lensing observables, not just a mass map.  We can transform those observations into a standard format or ask the user to do that."
+    "A `CLMassMod` object should be able to perform fitting based on any combination of a variety of lensing observables, not just a mass map.  We can transform those observations into a standard format or ask the user to do that.\n",
+    "\n",
+    "If the user wants to perform a stacked fit, the following two cells should be repeated in a loop over all of the relevant clusters, or the massmod object itself should contain the functionality to read in multiple maps at once."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "in_data_mass_map = clm.utils.load_mass_map(mass_map_loc)\n",
@@ -83,6 +93,22 @@
     "massmod.obs_delta_sigma = in_data_delta_sigma\n",
     "# NumCosmo has the NcWLSurfaceMassDensity/NcWeakLensing/NcDensityProfile/NcHICosmo class, the maps could be instances of that class"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After reading in the maps from simulations, a lensed galaxy catalog must be produced by sampling from the maps, adding in shape and measurement noise, then converting it to a shear profile. This will serve as the input mock WL observations. It should take place under the hood of the massmod object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -104,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "out_data_profiles, fit_info = massmod.fit_mass_profiles(calc_method, calc_params, save_loc)\n",
@@ -121,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# NumCosmo may do this already as NcmDataVoigt"
@@ -137,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "massmod.save_mass_profiles(save_loc)"
@@ -153,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bin_defs = np.linspace(bin_min, bin_max, n_bins)\n",
@@ -189,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bin_massmod = clm.CLMassMod(model_info)"
@@ -205,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bin_mass_profile_data = bin_massmod.read(bin_loc)\n",
@@ -224,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "likelihoods, posteriors, mass_dist_bias_samps, mass_dist_scatter_samps = bin_massmod.compare(truth)"
@@ -240,16 +280,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (not)",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
