edits to stackTools, wishlist

--- a/docs/wishlist.ipynb
+++ b/docs/wishlist.ipynb
@@ -98,17 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After reading in the maps from simulations, a lensed galaxy catalog must be produced by sampling from the maps, adding in shape and measurement noise, then converting it to a shear profile. This will serve as the input mock WL observations. It should take place under the hood of the massmod object."
+    "After reading in the maps from simulations, a lensed galaxy catalog must be produced by sampling from the maps, adding in shape and measurement noise, then converting it to a shear profile. This will serve as the input mock WL observations. It should probably take place under the hood of the massmod object. This will occur for both individual fits and stacking fits."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -124,7 +115,38 @@
     "\n",
     "`fit_info` is the object produced by the fitter, like the pymc MC object, with properties like diagnostics already in it\n",
     "\n",
-    "`out_data_profiles` is pdfs or mles over cluster mass and metadata, preferably as a set of (named) tuples"
+    "`out_data_profiles` is pdfs or mles over cluster mass and metadata, preferably as a set of (named) tuples\n",
+    "\n",
+    "Extra stack parameters:\n",
+    "`method` can be either \"woScaling\" for stacking without scaling, or \"wScaling\" for stacking with scaling.\n",
+    "\n",
+    "`presetX` is the user-defined binning for either the radial distance (for stacking without scaling) or for the scaled distance parameter x=r/rs (for stacking with scaling). It defines the bins that will help determine the eventual weighted radial bins for the stack.\n",
+    "\n",
+    "If one wants to perform the fit on a stack of clusters rather than on individual clusters, the following form should remain roughly the same. The only difference would be that either we will have an instance of `massmod` for each cluster, or a single instance of `massmod` which contains the shear profiles from all the clusters in the stack (probably better). Then the stack+fit process can be under the hood in a set of stacking tools accessed by the `massmod` object. The intermediate step on the front end then could be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-keyword arg after keyword arg (<ipython-input-3-25bb2f5fc176>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-25bb2f5fc176>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    massmod.deltaSigma, massmod.errSigma, massmod.avgR = massmod.stackTools.stack(method='woScaling', presetX)\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-keyword arg after keyword arg\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for stacking without scaling (more common method). There's probably a saner way to write this. I just want the stacked\n",
+    "#profile (deltaSigma) to be saved to the massmod object.\n",
+    "massmod.deltaSigma, massmod.errSigma, massmod.avgR = massmod.stackTools.stack(method='woScaling', presetX)\n",
+    "\n",
+    "#for stacking with scaling (from Niikura et al (2015)). When stacking with scaling, you don't actually fit a profile\n",
+    "#to the stack, you just see how close the average form of the profiles are to NFW\n",
+    "massmod.F, massmod.errF, massmod.avgX = massmod.stackTools.stack(method='wScaling', presetX)"
    ]
   },
   {
@@ -136,7 +158,7 @@
    "outputs": [],
    "source": [
     "out_data_profiles, fit_info = massmod.fit_mass_profiles(calc_method, calc_params, save_loc)\n",
-    "# NumCosmo may do this already as NcmFit/NcmM-SetCatalog, also supports "
+    "# NumCosmo may do this already as NcmFit/NcmM-SetCatalog, also supports"
    ]
   },
   {
